--- a/Task5/Task5.csproj
+++ b/Task5/Task5.csproj
@@ -36,6 +36,16 @@
     <ApplicationIcon>Ascending_Sorting_32.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Charts.v18.1.Core, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Data.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Printing.v18.1.Core, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraBars.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraCharts.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraCharts.v18.1.UI, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v18.1.Wizard, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraEditors.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraPrinting.v18.1, Version=18.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -160,6 +170,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MessagesMainFormView.resx</DependentUpon>
     </Compile>
+    <Compile Include="Forms\StatisticsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\StatisticsForm.Designer.cs">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model_and_Controller\Controller.cs" />
     <Compile Include="Forms\MainFormView.cs">
       <SubType>Form</SubType>
@@ -168,6 +184,13 @@
       <DependentUpon>MainFormView.cs</DependentUpon>
     </Compile>
     <Compile Include="Model_and_Controller\Model.cs" />
+    <Compile Include="Tools\CustomTabPageControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools\CustomTabPageControl.Designer.cs">
+      <DependentUpon>CustomTabPageControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\StatisticsInfoSaver.cs" />
     <Compile Include="Tools\ThreadParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -264,6 +287,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>MessagesMainFormView.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StatisticsForm.resx">
+      <DependentUpon>StatisticsForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -275,6 +302,9 @@
     </Compile>
     <EmbeddedResource Include="Forms\SortMethodsListForm.resx">
       <DependentUpon>SortMethodsListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\CustomTabPageControl.resx">
+      <DependentUpon>CustomTabPageControl.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Database\DatabaseModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
